# projekt-group1-project1

./: CMakeLists.docx  CMakeLists.txt  CSV-Load-Unit-Test  CSV-Load-Unit-Test.c  Projektdokumentation.md  README.md  Requirements.docx  Requirements.md  Samin.txt  project1group1  project1group1.c  sample.csv
src/: io.cpp  io.hpp  main.cpp  project1group1.c  project1group1.cpp  project1group1.h  project1group1.hpp  seating.cpp  seating.hpp  utils.c  utils.cpp  utils.hpp
test/: unit_tests.c  unit_tests.cpp
